// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > should render empty tabs 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-empty=""
    >
      No tabs available.
      <!---->
    </div>
    <!---->
     
    <div
      data-tabs-list=""
    >
      <!---->
       
      <!---->
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render simple tabs with string array 1`] = `
<div>
  <div
    aria-label="tabs"
    class="custom-class"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render simple tabs with string array 2`] = `
<div>
  <div
    aria-label="tabs"
    class="another-class"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render tabs with object array 1`] = `
<div>
  <div
    aria-label="tabs"
    class="custom-class"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render with custom content snippet 1`] = `
<div>
  <!---->
  <!---->
   
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    items=""
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
   
  <!---->
   
  <!---->
  
</div>
`;

exports[`Tabs > should render with custom empty state 1`] = `
<div>
  <!---->
  <!---->
   
  <!---->
   
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    items=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-empty=""
    >
      <div
        class="custom-empty-state"
      >
        Custom empty state - No tabs available here!
      </div>
      <!---->
    </div>
    <!---->
     
    <div
      data-tabs-list=""
    >
      <!---->
       
      <!---->
    </div>
     
    <!---->
  </div>
  <!---->
   
  <!---->
  
</div>
`;

exports[`Tabs > should render with custom header snippet 1`] = `
<div>
  <!---->
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    items=""
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
  
</div>
`;

exports[`Tabs > should render with different alignments 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="center"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render with different positions 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="after"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render with editable tabs 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <icon
          aria-checked="false"
          aria-label="action-close"
          data-disabled="false"
          data-icon-remove="true"
          data-size="base"
          data-tag-button="true"
          data-tag-icon="true"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-close"
          />
          <!---->
        </icon>
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <icon
          aria-checked="false"
          aria-label="action-close"
          data-disabled="false"
          data-icon-remove="true"
          data-size="base"
          data-tag-button="true"
          data-tag-icon="true"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-close"
          />
          <!---->
        </icon>
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <icon
          aria-checked="false"
          aria-label="action-close"
          data-disabled="false"
          data-icon-remove="true"
          data-size="base"
          data-tag-button="true"
          data-tag-icon="true"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-close"
          />
          <!---->
        </icon>
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <icon
          aria-checked="false"
          aria-label="action-close"
          data-disabled="false"
          data-icon-remove="true"
          data-size="base"
          data-tag-button="true"
          data-tag-icon="true"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-close"
          />
          <!---->
        </icon>
        <!---->
      </button>
      <!---->
       
      <icon
        aria-checked="false"
        aria-label="action-add"
        data-disabled="false"
        data-icon-add="true"
        data-size="base"
        data-tag-button="true"
        data-tag-icon="true"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="action-add"
        />
        <!---->
      </icon>
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render with field mapping 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        First
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Second
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        First content
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        Second content
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render with horizontal orientation 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render with selected value 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="true"
        class="selected focused"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Tabs > should render with vertical orientation 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="vertical"
    data-position="before"
    data-tabs-root="true"
    role="tablist"
    tabindex="0"
  >
    <!---->
    <div
      data-tabs-placeholder=""
    >
      Select a tab to view its content.
    </div>
    
    <!---->
     
    <div
      data-tabs-list=""
    >
      <button
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        id="tab-0"
        role="tab"
        tabindex="0"
      >
        Tab 1
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        id="tab-1"
        role="tab"
        tabindex="0"
      >
        Tab 2
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        id="tab-2"
        role="tab"
        tabindex="0"
      >
        Tab 3
        <!---->
         
        <!---->
      </button>
      <button
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        id="tab-3"
        role="tab"
        tabindex="0"
      >
        Tab 4
        <!---->
         
        <!---->
      </button>
      <!---->
       
      <!---->
    </div>
     
    <div
      aria-labelledby="tab-0"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-0"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-1"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-1"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-2"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-2"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <div
      aria-labelledby="tab-3"
      class="hidden"
      data-tabs-panel=""
      id="tab-panel-3"
      role="tabpanel"
    >
      <div
        data-tabs-content=""
      >
        
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;
